[package]
name = "shroomy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "~0.9.0"
bevy_quinnet = "~0.2.0"
bevy_egui = "~0.17.1"
tracing = "~0.1.37"
serde = { version = "~1.0", features = [ "derive" ] }
bincode = "~1.3.1"

shroomy_common = { path = "../shroomy_common" }
