[package]
name = "shroomy_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "~0.9.0", features = ["dynamic"] }
bevy_renet = "~0.0.6"
bevy_egui = "~0.17.1"
# bevy-inspector-egui = "~0.14.0"
tracing = "~0.1.37"
serde = { version = "1.0", features = [ "derive" ] }
