[package]
name = "shroomy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "~0.9.0", features = ["dynamic"] }
bevy_renet = "~0.0.6"
bevy_egui = "~0.17.1"
# bevy-inspector-egui = "~0.14.0"
renet_visualizer = { version = "~0.0.3", features = ["bevy"] }
tracing = "~0.1.37"
serde = { version = "~1.0", features = [ "derive" ] }
bincode = "~1.3.1"
rand = "~0.8.5"

shroomy_common = { path = "../shroomy_common" }
